--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -134,6 +134,9 @@
   "browser__vendor__version__language__operating_system_vendor": {
     "message": "navegador: proveedor, versión, idioma, proveedor del sistema operativo"
   },
+  "by_sharing_insights_on__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__as_outlined_in_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___you_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "Al compartir información sobre <a href=\"$${0}\">Rastreadores web</a>, <a href=\"$${1}\">salud de los complementos</a> y <a href=\"$${2}\">telemetría de rendimiento</a> como se describe en nuestra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, ayudas a mejorar las protecciones de privacidad para toda la comunidad de Ghostery."
+  },
   "cancel": {
     "message": "Cancelar"
   },
@@ -169,6 +172,9 @@
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "Colabora con la base de datos de rastreadores de Ghostery en Github"
+  },
+  "contributes_non_personal_information_about_web_trackers__add_on_health__and_performance_telemetry_to_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "Contribuye con información no personal sobre rastreadores web, el estado de los complementos y la telemetría de rendimiento para ayudar a mejorar las protecciones de privacidad para toda la comunidad de Ghostery."
   },
   "contributor": {
     "message": "Colaborador"
@@ -248,6 +254,9 @@
   "enabled": {
     "message": "Habilitado"
   },
+  "enter_email_address": {
+    "message": "Ingrese la dirección de correo electrónico"
+  },
   "enter_website_url": {
     "message": "Introduce la URL del sitio web"
   },
@@ -285,6 +294,9 @@
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Facilita la creación de tus propias reglas de bloqueo de anuncios para personalizar tu experiencia con Ghostery."
+  },
+  "feedback_sharing": {
+    "message": "Compartir comentarios"
   },
   "get_help": {
     "message": "Obtén ayuda"
@@ -328,6 +340,9 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Tracker & Ad Blocker solo identifica los rastreadores presentes en los sitios web que visitas. Estás navegando sin protección."
   },
+  "ghostery_uses_this_information_to_provide_its_community_powered_privacy_features__ensuring_that_personal_information_such_as_passwords__browsing_history__and_page_content_is_never_collected_": {
+    "message": "Ghostery utiliza esta información para ofrecer sus funciones de privacidad impulsadas por la comunidad, asegurando que nunca se recopile información personal, como contraseñas, historial de navegación y contenido de páginas."
+  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
@@ -360,10 +375,9 @@
     "message": "Infórmanos sobre una página con problemas, estaremos encantados de investigar y solucionar."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Información sobre <a href=\"$${0}\">rastreadores web</a>, <a href=\"$${1}\">salud de los complementos</a> y <a href=\"$${2}\">telemetría de rendimiento</a> se compartirá de acuerdo con nuestra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, avanzando en la protección de la privacidad para la comunidad de Ghostery.",
-    "description": "'add-on' means 'browser extension'"
+    "message": "Información sobre <a href=\"$${0}\">rastreadores web</a>, <a href=\"$${1}\">salud de los complementos</a> y <a href=\"$${2}\">telemetría de rendimiento</a> se compartirá de acuerdo con nuestra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, avanzando en la protección de la privacidad para la comunidad de Ghostery."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+  "it_exists_thanks_to_the_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__this_input_enables_ghostery_to_provide_real_time_intel_on_trackers__which__in_turn__delivers_privacy_protection_to_the_entire_ghostery_community_": {
     "message": "Existe gracias a las microcontribuciones de cada usuario de Ghostery que decide enviar información no personal a WhoTracks.Me. Esta aportación permite a Ghostery proporcionar información en tiempo real sobre los rastreadores, lo que a su vez proporciona protección a toda la comunidad de Ghostery."
   },
   "join_ghostery": {
@@ -497,6 +511,9 @@
   "pin_it_here": {
     "message": "Ánclala aquí"
   },
+  "please_describe_the_issue": {
+    "message": "Describa el problema, por favor"
+  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Evita que Google redirija los enlaces de los resultados de búsqueda a través de sus servidores, en lugar de enlazar directamente a las páginas."
   },
@@ -520,6 +537,9 @@
   },
   "regional_filters": {
     "message": "Filtros Regionales"
+  },
+  "reload_to_see_changes": {
+    "message": "Actualiza para ver los cambios"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Sustituye el icono de Ghostery de la barra de herramientas del navegador por la rueda de rastreadores."
@@ -685,6 +705,9 @@
     "message": "Sin identificar",
     "description": "Tracker category name"
   },
+  "uninstall": {
+    "message": "Desinstalar"
+  },
   "updating___": {
     "message": "actualizando..."
   },
@@ -731,8 +754,8 @@
   "what_s_next_": {
     "message": "¿Qué es lo siguiente?"
   },
-  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
+  "whotracks_me__operated_by_ghostery__is_a_vital_cornerstone_of_ghostery_s_ai_anti_tracking_technology__playing_a_crucial_role_in_providing_real_time_privacy_protection_for_the_ghostery_community__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, operado por Ghostery, es un pilar vital de la tecnología anti-rastreo de inteligencia artificial de Ghostery, desempeñando un papel crucial en proporcionar protección de privacidad en tiempo real para la comunidad de Ghostery. Es un recurso global integral sobre rastreadores, aportando transparencia al seguimiento web."
   },
   "whotracks_me_statistical_report": {
     "message": "Informe estadístico de WhoTracks.Me"
@@ -752,11 +775,11 @@
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Ya no verás las ruedas de los rastreadores junto a los resultados de búsqueda."
   },
+  "your_community_powered_privacy_features_": {
+    "message": "Tus funciones de privacidad impulsadas por la comunidad:"
+  },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
     "message": "Tu contribución ayuda a construir un internet más privado y seguro para toda la comunidad de Ghostery."
-  },
-  "your_privacy_features_": {
-    "message": "Tus funciones de privacidad:"
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
     "message": "¿Te impide YouTube ver vídeos sin publicidad?"
