--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -134,6 +134,9 @@
   "browser__vendor__version__language__operating_system_vendor": {
     "message": "browser: vendor, version, language, operating system vendor"
   },
+  "by_sharing_insights_on__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__as_outlined_in_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___you_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "By sharing insights on <a href=\"$${0}\">web trackers</a>, <a href=\"$${1}\">add-on's health</a>, and <a href=\"$${2}\">performance telemetry</a> as outlined in our <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Privacy Policy</a>, you help advance privacy protections for the entire Ghostery community."
+  },
   "cancel": {
     "message": "Cancel"
   },
@@ -169,6 +172,9 @@
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "Contribute to Ghostery Tracker Database on Github"
+  },
+  "contributes_non_personal_information_about_web_trackers__add_on_health__and_performance_telemetry_to_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "Contributes non-personal information about web trackers, add-on health, and performance telemetry to help advance privacy protections for the entire Ghostery community."
   },
   "contributor": {
     "message": "Contributor"
@@ -248,6 +254,9 @@
   "enabled": {
     "message": "Enabled"
   },
+  "enter_email_address": {
+    "message": "Enter email address"
+  },
   "enter_website_url": {
     "message": "Enter website URL"
   },
@@ -285,6 +294,9 @@
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Facilitates the creation of your own ad-blocking rules to customize your Ghostery experience."
+  },
+  "feedback_sharing": {
+    "message": "Feedback Sharing"
   },
   "get_help": {
     "message": "Get help"
@@ -328,6 +340,9 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Tracker & Ad Blocker is naming the trackers present on websites you visit. You are browsing the web unprotected."
   },
+  "ghostery_uses_this_information_to_provide_its_community_powered_privacy_features__ensuring_that_personal_information_such_as_passwords__browsing_history__and_page_content_is_never_collected_": {
+    "message": "Ghostery uses this information to provide its community-powered privacy features, ensuring that personal information—such as passwords, browsing history, and page content—is never collected."
+  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery will show how many trackers were blocked on a page. Clicking on the Ghostery icon reveals more detailed information."
   },
@@ -360,11 +375,10 @@
     "message": "Inform us about a broken page experience, we’re happy to investigate and fix."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Information about <a href=\"$${0}\">web trackers</a>, <a href=\"$${1}\">add-on's health</a>, and <a href=\"$${2}\">performance telemetry</a> will be shared in accordance with our <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Privacy Policy</a>, advancing privacy protection for the Ghostery community.",
-    "description": "'add-on' means 'browser extension'"
+    "message": "Information about <a href=\"$${0}\">web trackers</a>, <a href=\"$${1}\">add-on's health</a>, and <a href=\"$${2}\">performance telemetry</a> will be shared in accordance with our <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Privacy Policy</a>, advancing privacy protection for the Ghostery community."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send non-personal information to WhoTracks.Me. The input enables Ghostery to provide real-time intel on trackers which in turn provides protection to the entire Ghostery community."
+  "it_exists_thanks_to_the_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__this_input_enables_ghostery_to_provide_real_time_intel_on_trackers__which__in_turn__delivers_privacy_protection_to_the_entire_ghostery_community_": {
+    "message": "It exists thanks to the micro-contributions of every Ghostery user who chooses to send non-personal information to WhoTracks.Me. This input enables Ghostery to provide real-time intel on trackers, which, in turn, delivers privacy protection to the entire Ghostery community."
   },
   "join_ghostery": {
     "message": "Join Ghostery"
@@ -497,6 +511,9 @@
   "pin_it_here": {
     "message": "Pin it here"
   },
+  "please_describe_the_issue": {
+    "message": "Please describe the issue"
+  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Prevents Google from redirecting search result links through their servers instead of linking directly to pages."
   },
@@ -520,6 +537,9 @@
   },
   "regional_filters": {
     "message": "Regional Filters"
+  },
+  "reload_to_see_changes": {
+    "message": "Reload to see changes"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Replaces the Ghostery icon in the browser toolbar with the tracker wheel."
@@ -685,6 +705,9 @@
     "message": "Unidentified",
     "description": "Tracker category name"
   },
+  "uninstall": {
+    "message": "Uninstall"
+  },
   "updating___": {
     "message": "updating..."
   },
@@ -731,8 +754,8 @@
   "what_s_next_": {
     "message": "What’s next?"
   },
-  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, operated by Ghostery, is an integral part of Ghostery’s AI anti-tracking technology. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
+  "whotracks_me__operated_by_ghostery__is_a_vital_cornerstone_of_ghostery_s_ai_anti_tracking_technology__playing_a_crucial_role_in_providing_real_time_privacy_protection_for_the_ghostery_community__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, operated by Ghostery, is a vital cornerstone of Ghostery’s AI anti-tracking technology, playing a crucial role in providing real-time privacy protection for the Ghostery community. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
   },
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me Statistical Report"
@@ -752,11 +775,11 @@
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "You will no longer see tracker wheels next to the search results."
   },
+  "your_community_powered_privacy_features_": {
+    "message": "Your Community‑Powered Privacy Features:"
+  },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
     "message": "Your contribution helps build a more private and safe internet for the entire Ghostery community."
-  },
-  "your_privacy_features_": {
-    "message": "Your Privacy Features:"
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
     "message": "YouTube blocking you from watching ad-free videos?"
