--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -134,6 +134,9 @@
   "browser__vendor__version__language__operating_system_vendor": {
     "message": "ブラウザ：ベンダー、バージョン、言語、オペレーティングシステムベンダー"
   },
+  "by_sharing_insights_on__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__as_outlined_in_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___you_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "<a href=\"$${0}\">ウェブトラッカー</a>、<a href=\"$${1}\">アドオンの健康状態</a>、および<a href=\"$${2}\">パフォーマンステレメトリ</a>に関する洞察を、<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">プライバシーポリシー</a>に基づいて共有することで、Ghosteryコミュニティ全体のプライバシー保護の向上に貢献できます。"
+  },
   "cancel": {
     "message": "キャンセル"
   },
@@ -169,6 +172,9 @@
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "GithubでGhosteryトラッカーデータベースに寄付"
+  },
+  "contributes_non_personal_information_about_web_trackers__add_on_health__and_performance_telemetry_to_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "ウェブトラッカー、アドオンの健康状態、パフォーマンステレメトリーに関する非個人情報を提供し、Ghosteryコミュニティ全体のプライバシー保護を進めるのに役立ちます。"
   },
   "contributor": {
     "message": "Contributor"
@@ -248,6 +254,9 @@
   "enabled": {
     "message": "有効になっています"
   },
+  "enter_email_address": {
+    "message": "メールアドレスを入力"
+  },
   "enter_website_url": {
     "message": "ウェブサイトのURLを入力"
   },
@@ -285,6 +294,9 @@
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Ghosteryの体験をカスタマイズするために、自分自身の広告ブロックルールの作成を支援します。."
+  },
+  "feedback_sharing": {
+    "message": "フィードバック共有"
   },
   "get_help": {
     "message": "ヘルプ"
@@ -328,6 +340,9 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Tracker & Ad Blockerは、あなたが訪れるウェブサイトに存在するトラッカーの名前を表示します。ウェブを保護されていない状態でブラウジングしています。"
   },
+  "ghostery_uses_this_information_to_provide_its_community_powered_privacy_features__ensuring_that_personal_information_such_as_passwords__browsing_history__and_page_content_is_never_collected_": {
+    "message": "Ghosteryは、この情報を利用してコミュニティ主導のプライバシー機能を提供し、パスワード、閲覧履歴、ページ内容などの個人情報が収集されないようにしています。"
+  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
@@ -360,11 +375,10 @@
     "message": "ページの不具合についてお知らせください。調査して修正いたします。"
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "ウェブトラッカー、アドオンの健康状態、パフォーマンステレメトリーに関する情報は、Ghosteryコミュニティのプライバシー保護を進めるために、当社のプライバシーポリシーに従って共有されます。.",
-    "description": "'add-on' means 'browser extension'"
+    "message": "ウェブトラッカー、アドオンの健康状態、パフォーマンステレメトリーに関する情報は、Ghosteryコミュニティのプライバシー保護を進めるために、当社のプライバシーポリシーに従って共有されます。."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "これは、WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。 入力すると、Ghosteryは見返りとしてトラッカーと保護に関するリアルタイムの情報をGhosteryのコミュニティ全体に提供することができます。"
+  "it_exists_thanks_to_the_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__this_input_enables_ghostery_to_provide_real_time_intel_on_trackers__which__in_turn__delivers_privacy_protection_to_the_entire_ghostery_community_": {
+    "message": "WhoTracks.Meに個人情報以外の情報を送信することを選択したGhosteryユーザー全員による、小さな貢献のおかげで存在しています。この入力により、Ghosteryはトラッカーに関するリアルタイムの情報を提供し、その結果、Ghosteryコミュニティ全体にプライバシー保護をもたらします。"
   },
   "join_ghostery": {
     "message": "Ghosteryに登録"
@@ -497,6 +511,9 @@
   "pin_it_here": {
     "message": "ここにピン留め"
   },
+  "please_describe_the_issue": {
+    "message": "問題を説明してください"
+  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "検索結果のリンクを、Googleがページに直接リンクするのではなく、自社のサーバーを経由してリダイレクトするのを防ぎます。"
   },
@@ -520,6 +537,9 @@
   },
   "regional_filters": {
     "message": "地域フィルター"
+  },
+  "reload_to_see_changes": {
+    "message": "変更を確認するには、リロードしてください。"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "ブラウザのツールバーのGhosteryのアイコンをトラッカーホイールに置き換えます。"
@@ -685,6 +705,9 @@
     "message": "未知",
     "description": "Tracker category name"
   },
+  "uninstall": {
+    "message": "アンインストール"
+  },
   "updating___": {
     "message": "更新中..."
   },
@@ -731,8 +754,8 @@
   "what_s_next_": {
     "message": "次は何をするのでしょうか？"
   },
-  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
+  "whotracks_me__operated_by_ghostery__is_a_vital_cornerstone_of_ghostery_s_ai_anti_tracking_technology__playing_a_crucial_role_in_providing_real_time_privacy_protection_for_the_ghostery_community__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Meは、Ghosteryによって運営されており、GhosteryのAIアンチトラッキング技術の重要な基盤であり、Ghosteryコミュニティにリアルタイムのプライバシー保護を提供する上で重要な役割を果たしています。これは、トラッカーに関する包括的なグローバルリソースであり、ウェブトラッキングに透明性をもたらします。"
   },
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me統計レポート"
@@ -752,11 +775,11 @@
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "検索結果の横にトラッカーホイールが表示されなくなります。"
   },
+  "your_community_powered_privacy_features_": {
+    "message": "コミュニティ主導のプライバシー機能:"
+  },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
     "message": "あなたの貢献は、Ghosteryコミュニティ全体のために、よりプライベートで安全なインターネットを構築するのに役立ちます。"
-  },
-  "your_privacy_features_": {
-    "message": "あなたのプライバシーを守る機能:"
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
     "message": "YouTubeが広告なし動画の視聴をブロック？"
