--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -134,6 +134,9 @@
   "browser__vendor__version__language__operating_system_vendor": {
     "message": "przeglądarka: dostawca, wersja, język, dostawca systemu operacyjnego"
   },
+  "by_sharing_insights_on__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__as_outlined_in_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___you_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "Dzieląc się informacjami na temat <a href=\"$${0}\">trackerów</a>, <a href=\"$${1}\">stanie rozszerzenia</a> i <a href=\"$${2}\">telemetrii wydajności</a>, zgodnie z naszą <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, pomagasz wzmocnić ochronę prywatności dla całej społeczności Ghostery."
+  },
   "cancel": {
     "message": "Anuluj"
   },
@@ -169,6 +172,9 @@
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "Wnieś swój wkład w bazę danych trackerów Ghostery na Github"
+  },
+  "contributes_non_personal_information_about_web_trackers__add_on_health__and_performance_telemetry_to_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "Wnosi nieosobowe informacje o trackerach, kondycji rozszerzenia i telemetrii wydajności, aby pomóc w rozwoju ochrony prywatności całej społeczności Ghostery."
   },
   "contributor": {
     "message": "Kontrybutor"
@@ -248,6 +254,9 @@
   "enabled": {
     "message": "Włączone"
   },
+  "enter_email_address": {
+    "message": "Wprowadź adres email"
+  },
   "enter_website_url": {
     "message": "Wprowadź adres URL strony internetowej"
   },
@@ -285,6 +294,9 @@
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "Umożliwia tworzenie własnych reguł blokowania reklam, aby dostosować działanie Ghostery do swoich potrzeb."
+  },
+  "feedback_sharing": {
+    "message": "Udostępnianie informacji"
   },
   "get_help": {
     "message": "Uzyskaj pomoc"
@@ -328,6 +340,9 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Bloker Trackerów i Reklam nazywa trackery obecne na odwiedzanych przez Ciebie stronach internetowych. Przeglądasz sieć bez ochrony."
   },
+  "ghostery_uses_this_information_to_provide_its_community_powered_privacy_features__ensuring_that_personal_information_such_as_passwords__browsing_history__and_page_content_is_never_collected_": {
+    "message": "Ghostery wykorzystuje te informacje, aby zapewnić funkcje prywatności oparte na społeczności, gwarantując, że dane osobowe—takie jak hasła, historia przeglądania i zawartość stron—nigdy nie są zbierane."
+  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery będzie wyświetlać liczbę trackerów zablokowanych na danej stronie. Kliknięcie w ikonę Ghostery spowoduje wyśwetlenie bardziej szczegółowych informacji."
   },
@@ -360,10 +375,9 @@
     "message": "Poinformuj nas o problemach z działaniem strony, chętnie to zbadamy i naprawimy."
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Informacje o <a href=\"$${0}\">trackerach</a>, <a href=\"$${1}\">stanie rozszerzenia i <a href=\"$${2}\">telemetrii wydajności</a> będą udostępniane zgodnie z naszą <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, co przyczynia się do zwiększenia ochrony prywatności społeczności Ghostery.",
-    "description": "'add-on' means 'browser extension'"
+    "message": "Informacje o <a href=\"$${0}\">trackerach</a>, <a href=\"$${1}\">stanie rozszerzenia i <a href=\"$${2}\">telemetrii wydajności</a> będą udostępniane zgodnie z naszą <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, co przyczynia się do zwiększenia ochrony prywatności społeczności Ghostery."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
+  "it_exists_thanks_to_the_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__this_input_enables_ghostery_to_provide_real_time_intel_on_trackers__which__in_turn__delivers_privacy_protection_to_the_entire_ghostery_community_": {
     "message": "Istnieje dzięki mikrowkładom każdego użytkownika Ghostery, który zdecyduje się wysłać nieosobiste informacje do WhoTracks.Me. Wkład ten umożliwia Ghostery dostarczanie w czasie rzeczywistym informacji o trackerach, co z kolei zapewnia ochronę całej społeczności Ghostery."
   },
   "join_ghostery": {
@@ -497,6 +511,9 @@
   "pin_it_here": {
     "message": "Przypnij je tu"
   },
+  "please_describe_the_issue": {
+    "message": "Proszę opisać problem"
+  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "Uniemożliwiaj Google przekierowywanie łączy do wyników wyszukiwania przez ich serwery zamiast bezpośredniego łączenia do stron."
   },
@@ -520,6 +537,9 @@
   },
   "regional_filters": {
     "message": "Filtry regionalne"
+  },
+  "reload_to_see_changes": {
+    "message": "Przeładuj, aby zobaczyć zmiany"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "Zastępuje ikonę Ghostery w pasku narzędzi przeglądarki ikoną koła."
@@ -685,6 +705,9 @@
     "message": "Niezidentyfikowane",
     "description": "Tracker category name"
   },
+  "uninstall": {
+    "message": "Odinstaluj"
+  },
   "updating___": {
     "message": "aktualizowanie..."
   },
@@ -731,8 +754,8 @@
   "what_s_next_": {
     "message": "Co dalej?"
   },
-  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość w temacie śledzenia w sieci."
+  "whotracks_me__operated_by_ghostery__is_a_vital_cornerstone_of_ghostery_s_ai_anti_tracking_technology__playing_a_crucial_role_in_providing_real_time_privacy_protection_for_the_ghostery_community__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me, obsługiwane przez Ghostery, jest kluczowym elementem technologii antyśledzącej AI Ghostery, odgrywającym istotną rolę w zapewnianiu ochrony prywatności w czasie rzeczywistym dla społeczności Ghostery. Jest to kompleksowe globalne źródło informacji o trackerach, wnoszące przejrzystość do śledzenia w sieci."
   },
   "whotracks_me_statistical_report": {
     "message": "Raport statystyczny WhoTracks.Me"
@@ -752,11 +775,11 @@
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "Wykresy kołowe z trackerami nie będą wyświetlane obok wyników wyszukiwania."
   },
+  "your_community_powered_privacy_features_": {
+    "message": "Twoje funkcje prywatności wspierane przez społeczność:"
+  },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
     "message": "Twój wkład pomaga budować bardziej prywatny i bezpieczny internet dla całej społeczności Ghostery."
-  },
-  "your_privacy_features_": {
-    "message": "Twoje funkcje prywatności:"
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
     "message": "YouTube blokuje Ci możliwość oglądania filmów bez reklam?"
