--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -134,6 +134,9 @@
   "browser__vendor__version__language__operating_system_vendor": {
     "message": "瀏覽器：供應商、版本、語言、作業系統供應商"
   },
+  "by_sharing_insights_on__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__as_outlined_in_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___you_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "透過分享我們<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">隱私政策</a>中所述的<a href=\"$${0}\">網路追蹤器</a>、<a href=\"$${1}\">附加元件健康狀況</a>和<a href=\"$${2}\">效能遙測</a>的見解，您有助於提升整個Ghostery社群的隱私保護。"
+  },
   "cancel": {
     "message": "取消"
   },
@@ -169,6 +172,9 @@
   },
   "contribute_to_ghostery_tracker_database_on_github": {
     "message": "在 Github 上為 Ghostery Tracker Database 貢獻"
+  },
+  "contributes_non_personal_information_about_web_trackers__add_on_health__and_performance_telemetry_to_help_advance_privacy_protections_for_the_entire_ghostery_community_": {
+    "message": "貢獻有關網路追蹤器、附加元件健康狀況和效能遙測的非個人資訊，以幫助提升整個Ghostery社群的隱私保護。"
   },
   "contributor": {
     "message": "貢獻者"
@@ -248,6 +254,9 @@
   "enabled": {
     "message": "已啟用"
   },
+  "enter_email_address": {
+    "message": "輸入電子郵件地址"
+  },
   "enter_website_url": {
     "message": "輸入網站網址"
   },
@@ -285,6 +294,9 @@
   },
   "facilitates_the_creation_of_your_own_ad_blocking_rules_to_customize_your_ghostery_experience_": {
     "message": "協助您創建自己的廣告攔截規則，以自訂您的Ghostery體驗。."
+  },
+  "feedback_sharing": {
+    "message": "意見分享"
   },
   "get_help": {
     "message": "取得幫助"
@@ -328,6 +340,9 @@
   "ghostery_tracker___ad_blocker_is_naming_the_trackers_present_on_websites_you_visit__you_are_browsing_the_web_unprotected_": {
     "message": "Ghostery Tracker＆Ad Blocker正在命名您访问的网站上的跟踪器。您正在未受保护的情况下浏览网页。"
   },
+  "ghostery_uses_this_information_to_provide_its_community_powered_privacy_features__ensuring_that_personal_information_such_as_passwords__browsing_history__and_page_content_is_never_collected_": {
+    "message": "Ghostery 使用這些資訊來提供其社群驅動的隱私功能，確保不會收集個人資訊，例如密碼、瀏覽歷史和頁面內容。"
+  },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
@@ -360,11 +375,10 @@
     "message": "請告訴我們有關網頁故障的經驗，我們很樂意調查並修復。"
   },
   "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "有關<a href=\"$${0}\">網路追蹤器</a>、<a href=\"$${1}\">附加元件健康狀況</a>和<a href=\"$${2}\">效能遙測</a>的信息將根據我們的<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">隱私政策</a>分享，以促進Ghostery社群的隱私保護。.",
-    "description": "'add-on' means 'browser extension'"
+    "message": "有關<a href=\"$${0}\">網路追蹤器</a>、<a href=\"$${1}\">附加元件健康狀況</a>和<a href=\"$${2}\">效能遙測</a>的信息將根據我們的<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">隱私政策</a>分享，以促進Ghostery社群的隱私保護。."
   },
-  "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。 這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
+  "it_exists_thanks_to_the_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__this_input_enables_ghostery_to_provide_real_time_intel_on_trackers__which__in_turn__delivers_privacy_protection_to_the_entire_ghostery_community_": {
+    "message": "它的存在要歸功於每位選擇將非個人資料傳送到 WhoTracks.Me 的 Ghostery 用戶的微小貢獻。這些資料的輸入使 Ghostery 能夠提供有關追蹤器的即時情報，進而為整個 Ghostery 社群提供保護。"
   },
   "join_ghostery": {
     "message": "加入 Ghostery"
@@ -497,6 +511,9 @@
   "pin_it_here": {
     "message": "於此處釘選"
   },
+  "please_describe_the_issue": {
+    "message": "請描述問題"
+  },
   "prevents_google_from_redirecting_search_result_links_through_their_servers_instead_of_linking_directly_to_pages_": {
     "message": "防止 Google 透過其伺服器重新導向搜尋結果連結，而不是直接連結到網頁。"
   },
@@ -520,6 +537,9 @@
   },
   "regional_filters": {
     "message": "區域過濾器"
+  },
+  "reload_to_see_changes": {
+    "message": "重新載入以觀看變化。"
   },
   "replaces_the_ghostery_icon_in_the_browser_toolbar_with_the_tracker_wheel_": {
     "message": "將瀏覽器工具列中的 Ghostery 圖示換成追蹤器齒輪。"
@@ -685,6 +705,9 @@
     "message": "不明",
     "description": "Tracker category name"
   },
+  "uninstall": {
+    "message": "解除安裝"
+  },
   "updating___": {
     "message": "更新中..."
   },
@@ -731,8 +754,8 @@
   "what_s_next_": {
     "message": "下一步是？"
   },
-  "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
+  "whotracks_me__operated_by_ghostery__is_a_vital_cornerstone_of_ghostery_s_ai_anti_tracking_technology__playing_a_crucial_role_in_providing_real_time_privacy_protection_for_the_ghostery_community__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
+    "message": "WhoTracks.Me由Ghostery運營，是Ghostery人工智慧反追蹤技術的重要基石，在為Ghostery社群提供即時隱私保護方面發揮了關鍵作用。它是一個關於追蹤器的全面全球資源，為網路追蹤帶來透明度。"
   },
   "whotracks_me_statistical_report": {
     "message": "WhoTracks.Me 統計報告"
@@ -752,11 +775,11 @@
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
     "message": "你將不會再在搜尋結果旁邊看到追蹤器輪盤。"
   },
+  "your_community_powered_privacy_features_": {
+    "message": "您的社群驅動隱私功能："
+  },
   "your_contribution_helps_build_a_more_private_and_safe_internet_for_the_entire_ghostery_community_": {
     "message": "您的貢獻有助於為整個Ghostery社群建立一個更私密和安全的網路。"
-  },
-  "your_privacy_features_": {
-    "message": "你的隱私功能："
   },
   "youtube_blocking_you_from_watching_ad_free_videos_": {
     "message": "YouTube 阻止您觀看無廣告的影片？"
